Url 자동생성 (조회 기능에서 확인할 때 필요), 룸 엔티티 및 DTO 수정

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -8,11 +8,19 @@ group = 'seb15'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
