feat : 아이디찾기 기능구현

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -35,3 +35,7 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### my ignore ###
+src/main/resources/application.yml
+src/main/resources/application.properties
