--- a/server/.gitignore
+++ b/server/.gitignore
@@ -40,3 +40,4 @@ out/
 src/main/resources/application.yml
 src/main/resources/application.properties
 src/main/resources/**
+src/main/java/seb15/roobits/roobit/mapper/**
