--- a/server/.gitignore
+++ b/server/.gitignore
@@ -39,3 +39,6 @@ out/
 ### my ignore ###
 src/main/resources/application.yml
 src/main/resources/application.properties
+src/main/resources/**
+src/main/generated/**
+
