Feat/fe/home page (#116)
* feat: 메인페이지 구성

* fix: 회원가입 유효성 검사 부분 수정

* feat: 선택시 이메일 작성란 활성화 기능 추가

* fix: 리다이렉팅 주소 수정

* feat: google OAuth 버튼 생성 및 authorizationCode 생성

* fix: google OAuth 버튼 클릭 효과 추가

* fix: eslint 오류 수정(process.env 빨간줄 생기는 현상 수정)

* fix: 회원가입 할 때는 이메일 필수 수집

* fix: input value에 'null' 값 들어가는 오류 수정

* feat: fontawesome 설치

* feat: fontawesome 설치-2

* feat: fontawesome 사용 성공

* feat: 회원가입 페이지 디자인 구성

* feat: 로그인 페이지 디자인 구성

* feat: google 로그인 아이콘 삽입

* fix: 이미지 크기 조정

* feat: React query 시작 전 commit

* feat: Query Client 적용

* feat: react-query devtools 설치

* feat: 기존 로그인 프로세스 react-query 적용하여 리팩토링

* fix: 버튼 두번 클릭해야 submit 작동하는 오류 해결

* fix: react-query 간단한 구조로 변경

* fix: react-query devltools 위치 변경

* fix: weather api key 삭제

* feat: Header Login/Join 버튼 디자인 적용

* feat: Header 디자인 완료, dot Navigator 삭제

* feat: 아이디 중복체크 API 연결

* fix: e.preventDefault에 전달인자 누락 수정

* feat: 아이디 찾기 구현

* feat: 비밀번호 찾기 구현

* fix: 오탈자 수정

* fix: Login navigate 수정

* fix: 커밋 포인트

* fix: react-query useQuery fn 수정

* feat: login 기능 구현, header로 JWT 주고 받기

* fix: 헤더 버튼 위치 변경 안 되게 수정

* feat: windows.location.replace 사용하여 재렌더링

* fix: login 두번 눌러야 하는 문제 해결, setVariable('')과 같은 useState 비동기 문제였음

* fix: login 두번 눌러야 하는 문제 해결, onChange 사용

* feat: profile 버튼 추가

* fix: 로그인 페이지 디자인 변경 반영

* fix: 프로필 로고 디자인 수정

* feat: 회원정보 수정 페이지 구현

* feat: 정보수정 기능 구현

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,9 +1,17 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true,
+    "commonjs": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:import/recommended", "plugin:jsx-a11y/recommended", "plugin:prettier/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:import/recommended",
+    "plugin:jsx-a11y/recommended",
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -13,6 +21,7 @@
   },
   "rules": {
     "react/react-in-jsx-scope": 0,
-    "react/jsx-uses-react": 0
+    "react/jsx-uses-react": 0,
+    "react/prop-types": "off"
   }
 }
