--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
