feat: myRoom 페이지 구현 (#153)
* fix: username, email 변경 불가능 하게 수정

* feat: 비밀번호 확인 기능 추가

* feat: 페이지 리다이렉션시 access_token 조회 코드 작성

* feat: 회원탈퇴 API 요청 추가

* feat: 나의 룸 페이지 구현

* feat: react-tooltip 라이브러리 설치

* feat: tooltip 기능 구현

* feat: 이메일 중복 기능 구현

* feat: kakao 공유하기 버튼 생성 완료

* fix: share button design 수정

* feat: share button fadein 효과 추가

* fix: 다른 곳 클릭시 모달창 사라지는 문제 해결

* fix: 최대 룸 개수 메세지 조정

* fix: sharebutton 컴포넌트로 분리 (리팩토링)

* fix: 주석 추가

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=http://ec2-3-36-122-4.ap-northeast-2.compute.amazonaws.com:8080
+REACT_APP_API_URL=http://ec2-3-35-170-190.ap-northeast-2.compute.amazonaws.com:8080
+REACT_APP_KAKAO_KEY=901161c206462fe2f9843768e1a000bc
