--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.0",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
@@ -55,7 +57,8 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1"
   },
   "homepage": "./"
 }
