fix: app.js 로그인 판별에 getqueriesdata 사용

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -23,5 +23,12 @@
     "react/react-in-jsx-scope": 0,
     "react/jsx-uses-react": 0,
     "react/prop-types": "off"
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
   }
 }
