--- a/server/build.gradle
+++ b/server/build.gradle
@@ -20,7 +20,6 @@ repositories {
 
 dependencies {
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
@@ -41,8 +40,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	runtimeOnly	'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
+	runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	implementation 'org.springframework.retry:spring-retry:1.3.3'
 }
 
 tasks.named('test') {
