--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,12 @@
     "react-dom": "^18.2.0",
     "react-fullpage": "^0.1.19",
     "react-query": "^3.39.2",
+    "react-rain-animation": "^1.0.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.0",
+    "react-snowfall": "^1.2.1",
     "react-tooltip": "^4.2.21",
     "react-type-animation": "^2.1.1",
     "styled-components": "^5.3.5",
