--- a/server/build.gradle
+++ b/server/build.gradle
@@ -42,8 +42,15 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'org.springframework.retry:spring-retry:1.3.3'
-}
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws-parameter-store-config'
+	compileOnly "com.fasterxml.jackson.core:jackson-databind:2.9.4" //? 확인
 
+}
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Hoxton.SR12"
+	}
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
