--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,8 @@
 FROM openjdk:11-jdk
 
-#ARG JAR_FILE=build/libs/*.jar
-#COPY ${JAR_FILE} app.jar
-#ENTRYPOINT ["java", "-jar", "/app.jar"]
-
-ARG YML_FILE=./*.yml
-COPY ${YML_FILE} app.yml
-ENTRYPOINT ["cat", "/app.yml"]
+ARG JAR_FILE=build/libs/*.jar
+COPY ${JAR_FILE} app.jar
+ENTRYPOINT ["java", "-jar", "/app.jar"]
 
 ENV TZ Asia/Seoul
 RUN ln -snf /usr/share/zoneinfo/$TZ  /etc/localtime && echo $TZ > /etc/timezone
