--- a/server/build.gradle
+++ b/server/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'org.springframework.retry:spring-retry:1.3.3'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
